fix about the new groups
